<resources>
    <string name="app_name">Tarmeez</string>
    <string name="enter_email">Enter your email %s</string>
    <string name="enter_password">Enter your password %s</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">Login</string>
    <string name="error_message">Invalid data %s </string>
    <string name="new_account">Create new account</string>
    <string name="password_confirmation">Enter password confirmation %s</string>
    <string name="has_account">Already have account?</string>
    <string name="create_account">Create account</string>
    <string name="already_exist">Account already exist %s </string>
    <string name="enter_your_email">Please enter your email</string>
    <string name="enter_your_password">Please enter your password"</string>
    <string name="un_matched_password">The password does not match</string>
    <string name="password_more_than_six">Password mut be 6 or more</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="questions_number">Question %d/%d</string>
    <string name="quiz_button">Test your knowledge</string>
    <string name="back_to_sections">Back</string>
    <string name="forgot_password">Reset password</string>
    <string name="password_reset">Email has been sent</string>
    <string name="if_condition">If\ncondition</string>
    <string name="variables">Variables</string>
    <string name="funcation">Function</string>
    <string name="array">Arrays</string>
    <string name="your_name">Your name</string>
    <string name="your_age">Your age</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="games">Games</string>
    <string name="matching_game">Matching Game</string>
    <string name="fighting_game">Fighting Aliens Game</string>
    <string name="are_you_ready_to_fight_aliens">Are you ready to fight Aliens?</string>
    <string name="game_over">Game Over</string>
</resources>