<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:layout_marginEnd="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="login.json"
        app:lottie_loop="true" />

    <EditText
        android:id="@+id/user_email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_style"
        android:drawableRight="@drawable/ic_baseline_email_24"
        android:gravity="right"
        android:padding="10dp"
        android:singleLine="true"
        android:nextFocusDown="@id/user_password"
        android:textSize="14sp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/user_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_style"
        android:drawableRight="@drawable/ic_baseline_lock_24"
        android:gravity="right"
        android:padding="10dp"
        android:singleLine="true"
        android:nextFocusDown="@string/password_confirmation"
        android:textSize="14sp"
        android:layout_marginTop="10dp"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/user_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/password_confirmation"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_text_style"
        android:inputType="textPassword"
        android:gravity="right"
        android:singleLine="true"
        android:drawableRight="@drawable/ic_baseline_lock_24"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/user_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/register"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="15sp"
        android:background="@drawable/button_style"
        android:text="@string/create_account"
        app:layout_constraintTop_toBottomOf="@id/password_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/has_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10dp"
        android:text="@string/has_account"
        android:textColor="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register"
        app:layout_constraintVertical_bias="0.057"
        tools:ignore="SmallSp" />
</androidx.constraintlayout.widget.ConstraintLayout>